It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Tue, Aug 8, 2009
---------------------------------------------------------------------
- Installed [Highline] gem in vendor/gems for [rake crm:setup:admin] task.
- Implemented [rake crm:setup:admin] task to create admin user.

Sat, Aug 8, 2009
---------------------------------------------------------------------
- Added :before_destroy filters for User model.
- Implemented deleting users in Admin interface.
- Refactored flash messages to set notice/warning class on the fly.

Wed, Aug 5, 2009
---------------------------------------------------------------------
- Added confirmation when deleting an user (Admin/Users/Delete).

Tue, Aug 4, 2009
---------------------------------------------------------------------
- Upgraded [acts_as_commentable] plugin for Ruby 1.9 compatibility.
- Updated tab settings to allow Fat Free CRM to run from a subdirectory (thanks, okyada!).
- Updated [rake crm:settings:load] task to ensure Rails 2.3.3 compatibility.
- Implemented Admin > [Edit User] form.

Mon, Aug 3, 2009
---------------------------------------------------------------------
- Implemented Admin > [Create User] form.
- Include all application helpers except the ones in /admin/helpers subdirectory (GH #5).
- Make sure editing assets doesn't change asset owner (LH #79).
- Implemented [Suspend] and [Reactivate] when managing users.
- Prevent suspended user from logging in.

Sun, Aug 2, 2009
---------------------------------------------------------------------
- Updated authentication to allow creating users with blank passwords.

Sat, Aug 1, 2009
---------------------------------------------------------------------
- More work on Admin/Users: added list of users and [Create User] form.

Fri, Jul 31, 2009
---------------------------------------------------------------------