@@ -1,0 +1,2 @@
+.filters#filters
+  = render :partial => "common/search"
