@@ -1,0 +1,2 @@
+page[:users].replace_html render(:partial => "user", :collection => @users)
+page[:paginate].replace_html render(:partial => "common/paginate")
